# simracing-virtual-mentor

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
.github/: clippy.yaml  tests.yaml
app/backend/: Cargo.toml  backend-config.yaml
app/backend/src/: lib.rs  main.rs
app/backend/src/analysis/application/create/: service.rs
app/backend/src/analysis/application/delete/: service.rs
app/backend/src/analysis/application/find/by_criteria/: service.rs
app/backend/src/analysis/application/find/by_id/: service.rs
app/backend/src/analysis/domain/: analyses.rs  repository.rs
app/backend/src/analysis/infrastructure/repository/: in_memory.rs
app/backend/src/api/application/parse_ibt/: service.rs
app/backend/src/api/domain/: converter.rs
app/backend/src/api/domain/event/: ibt_parsed.rs
app/backend/src/api/infrastructure/: app_assembler.rs  settings.rs
app/backend/src/api/infrastructure/app_assembler/: analysis.rs  file.rs  ibt.rs  lap.rs  subscriber.rs
app/backend/src/api/infrastructure/controller/: analysis.rs  file.rs  ibt_extractor.rs  lap.rs  post_file.rs  upload_file.rs  upload_ibt.rs
app/backend/src/api/infrastructure/event/: tokio_bus.rs
app/backend/src/api/infrastructure/repository/: mongo.rs
app/backend/src/api/infrastructure/subscriber/: manager.rs  on_ibt_extracted.rs  on_ibt_parsed.rs
app/backend/src/file/application/create/: service.rs
app/backend/src/file/application/delete/: service.rs
app/backend/src/file/application/validate/: service.rs
app/backend/src/file/domain/: file.rs  files.rs  repository.rs
app/backend/src/file/domain/event/: created.rs  deleted.rs  validated.rs
app/backend/src/file/domain/file/: status.rs
app/backend/src/file/infrastructure/repository/: in_memory.rs
app/backend/src/ibt/domain/: file.rs
app/backend/src/ibt/domain/file/: disk_header.rs  from_reader.rs  from_stream.rs  header.rs  metric.rs  metrics.rs  session_info.rs  var_filter.rs  var_header.rs  var_headers.rs  var_value.rs
app/backend/src/ibt_extractor/application/extract/: service.rs
app/backend/src/ibt_extractor/domain/: converter.rs
app/backend/src/ibt_extractor/domain/event/: extracted.rs
app/backend/src/ibt_extractor/infrastructure/: app_assembler.rs
app/backend/src/ibt_extractor/infrastructure/app_assembler/: file.rs
app/backend/src/lap/application/create/: service.rs
app/backend/src/lap/domain/: lap.rs  laps.rs  repository.rs
app/backend/src/lap/domain/event/: laps_created.rs
app/backend/src/lap/domain/lap/: header.rs  metric.rs  metrics.rs
app/backend/src/lap/infrastructure/repository/: in_memory.rs
app/backend/src/shared/domain/: event.rs
app/backend/src/shared/domain/event/: bus.rs  subscriber.rs
app/backend/src/shared/infrastructure/event/: dummy.rs  dummy_event.rs  dummy_subscriber.rs  tokio_bus.rs
app/frontend/: Cargo.toml  Trunk.toml  frontend-config.yaml  index.html  index.scss
app/frontend/assets/scripts/: plotly_interop.js  utils.js
app/frontend/src/: lib.rs  main.rs  utils.rs
app/frontend/src/infrastructure/: settings.rs
app/frontend/src/infrastructure/components/: analyses.rs  analysis_creator.rs  app.rs  dashboard.rs  files.rs  home.rs  laps.rs  navbar.rs  repository_context.rs  routes.rs  scatter_plot.rs
app/frontend/src/infrastructure/components/analyses/: list.rs
app/frontend/src/infrastructure/components/analysis_creator/: lap_selector.rs
app/frontend/src/infrastructure/components/dashboard/: circuit.rs  hook.rs  plot.rs  suggestions.rs
app/frontend/src/infrastructure/components/files/: file_lister.rs  file_uploader.rs  filter.rs  list.rs  uploader.rs
app/frontend/src/infrastructure/components/laps/: filter.rs  list.rs
app/frontend/src/infrastructure/repository/analysis/: http.rs
app/frontend/src/infrastructure/repository/file/: http.rs
app/frontend/src/infrastructure/repository/ibt/: http.rs
app/frontend/src/infrastructure/repository/lap/: http.rs
app/shared/: Cargo.toml
app/shared/src/: lib.rs
app/shared/src/analysis/application/analyze/: service.rs
app/shared/src/analysis/application/create/: service.rs
app/shared/src/analysis/application/delete/: service.rs
app/shared/src/analysis/application/update/: service.rs
app/shared/src/analysis/domain/: analyses.rs  analysis.rs  repository.rs
app/shared/src/analysis/domain/analysis/: clustering.rs  clusters_memberships.rs  differences.rs  distances.rs  fcm_grid.rs  fuzzy_c_means.rs  header.rs  headers.rs  interpolation.rs  reference_lap.rs  status.rs  tag.rs  tag_assigner.rs  tags.rs
app/shared/src/analysis/domain/event/: created.rs
app/shared/src/analysis/infrastructure/repository/: in_memory.rs
app/shared/src/common/domain/: criteria.rs  event.rs
app/shared/src/common/domain/criteria/: filter.rs  filters.rs  order.rs
app/shared/src/common/domain/event/: bus.rs  subscriber.rs
app/shared/src/common/infrastructure/event/: tokio_bus.rs
app/shared/src/file/application/create/: service.rs
app/shared/src/file/application/delete/: service.rs
app/shared/src/file/application/mark_as_error/: service.rs
app/shared/src/file/application/validate/: service.rs
app/shared/src/file/domain/: file.rs  files.rs  repository.rs
app/shared/src/file/domain/event/: created.rs  deleted.rs  validated.rs
app/shared/src/file/infrastructure/repository/: in_memory.rs
app/shared/src/ibt/domain/: file.rs
app/shared/src/ibt/domain/file/: disk_header.rs  from_reader.rs  header.rs  macros.rs  metric.rs  metrics.rs  session_info.rs  var_filter.rs  var_header.rs  var_headers.rs  var_value.rs  variable.rs  variables.rs
app/shared/src/lap/application/create/: service.rs
app/shared/src/lap/application/delete/: service.rs
app/shared/src/lap/domain/: lap.rs  laps.rs  repository.rs
app/shared/src/lap/domain/lap/: header.rs  headers.rs  metrics.rs  variables.rs
app/shared/src/lap/infrastructure/repository/: in_memory.rs
app/shared/src/telemetry/domain/: circuit.rs  lap.rs  player.rs  repository.rs  session.rs
app/shared/src/telemetry/infrastructure/repository/: in_memory.rs
(+145 files in other folders)
