[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "backend_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
axum = { version =  "0.7.5", features = ["multipart", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures-util = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
shared = {path = "../shared"}