[package]
name = "symracing_virtual_mentor_frontend"
version = "0.1.0"
edition = "2021"
description = "Simracing Virtual Mentor Yew bootstrap project using Trunk"
resolver = "2"
readme = "README.md"

[[bin]]
name = "symracing_virtual_mentor_frontend"
path = "src/main.rs"

[lib]
name = "symracing_virtual_mentor_frontend_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
yew = {  version = "0.21", features = ["csr"] }
yew-hooks = "0.3.2"
plotly = { version = "0.8.4", features = ["wasm"] }
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
symracing_virtual_mentor_shared = {path = "../shared"}
uuid = { version = "1.8.0", features = ["v4", "serde"] }
gloo-net = { version = "0.5.0", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
wasm-bindgen-futures = { version = "0.4.42" }
log = "0.4.21"