[package]
name = "symracing_virtual_mentor_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }